# binance-trade

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.local.md  config.mainnet.yaml.example  config.yaml  config.yaml.example  contributing.md  main.py  pyproject.toml  requirements.txt
deploy/: biance-trade-web.service  biance-trade.service  binance-trade-frontend.service  binance-trade-web.service  binance-trade-web@.service  binance-trade.service  binance-trade@.service  nginx-biance-trade-selfsigned.conf  nginx-biance-trade.conf  nginx-binance-trade-selfsigned.conf  nginx-binance-trade.conf
deploy/certs/: selfsigned.crt
docs/: DEPLOY.md  MAINNET_ROLLOUT.md  RUNBOOK.md  WEB_SETUP.md
docs/ops/: 2026-06-05-exchange-reconcile-hardening.md  2026-06-05-resume-all-symbols.md  (+44 more)
scripts/: check_env_ready.sh  recon_day_pnl.py  start_with_keyring.sh
tests/: conftest.py  test_account_state.py  test_adjust_sltp.py  test_backtest.py  test_binance_trade_reconcile.py  test_config_schema.py  test_decision_guards.py  test_engine.py  test_engine_settings.py  test_exchange_normalizers.py  test_execution_settings.py  test_executor.py  test_features.py  test_filters.py  test_llm_client.py  test_llm_failover.py  test_llm_profile.py  test_llm_prompt.py  test_llm_providers.py  test_llm_schema.py  test_market_slippage_guard.py  test_notify.py  test_open_orders_normalizer.py  test_risk.py  test_size_pct_prompt_discipline.py  test_state.py  test_store.py  test_throttle.py  test_web_server_protection.py  test_web_status.py
web/: __init__.py  market_feed.py  server.py  status.py
(+64 files in other folders)
