[project]
name = "binance-trade"
version = "0.1.0"
description = "LLM-driven Binance USDT-M perpetual futures trading bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
]

[project.scripts]
binance-trade = "main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
